fix geolocations overflow + fade confirmation

--- a/Project/biodiversity-oman.com/web/css/admin.css
+++ b/Project/biodiversity-oman.com/web/css/admin.css
@@ -227,12 +227,13 @@ nav ul ul ul {
     left: 12.5%;
     right: 12.5%;
     width: 75%;
-    height: 100%;
+    max-height: 100%;
     padding: 10px;
     border-radius: 0.2em 0.2em 0.2em 0.2em;
     background-color: #ffffff;
     z-index:1002;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 .whitebox .content {
     margin-top: 2em;
